Debugger does not stop inside the low memory notifications code

XMLWordPrintable

    • b18

      Using the attached reporducer, run jdb as below to reporduce the issue.

      jdb -Xmx32m MemoryWarningSystem
      Initializing jdb ...
      > stop in MemoryWarningSystem$MyListener.memoryUsageLow
      Deferring breakpoint MemoryWarningSystem$MyListener.memoryUsageLow.
      It will be set after the class is loaded.
      > run
      run MemoryWarningSystem
      Set uncaught java.lang.Throwable
      Set deferred uncaught java.lang.Throwable
      >
      VM Started: Memory usage low!!!

      Exception occurred: java.lang.OutOfMemoryError (uncaught)"thread=main", java.lang.Double.valueOf(), line=524 bci=0

      main[1]

            Assignee:
            Daniil Titov (Inactive)
            Reporter:
            Shadow Bug
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: