8170299: Debugger does not stop inside the low memory notifications code

Reviewed-by: sspitsyn, dholmes