src/jdk.hotspot.agent/share/classes/sun/jvm/hotspot/runtime/NotificationThread.java
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,32 +22,16 @@
  *
  */
 
-#ifndef SHARE_RUNTIME_SERVICETHREAD_HPP
-#define SHARE_RUNTIME_SERVICETHREAD_HPP
+package sun.jvm.hotspot.runtime;
 
-#include "runtime/thread.hpp"
 
-// A hidden from external view JavaThread for JVMTI compiled-method-load
-// events, oop storage cleanup, and the maintainance of string, symbol,
-// protection domain, and resolved method tables.
+import sun.jvm.hotspot.debugger.Address;
 
-class ServiceThread : public JavaThread {
-  friend class VMStructs;
- private:
+public class NotificationThread extends JavaThread {
+    public NotificationThread(Address addr) {
+        super(addr);
+    }
 
-  static ServiceThread* _instance;
+    public boolean isJavaThread() { return false; }
 
-  static void service_thread_entry(JavaThread* thread, TRAPS);
-  ServiceThread(ThreadFunction entry_point) : JavaThread(entry_point) {};
-
- public:
-  static void initialize();
-
-  // Hide this thread from external view.
-  bool is_hidden_from_external_view() const      { return true; }
-
-  // Returns true if the passed thread is the service thread.
-  static bool is_service_thread(Thread* thread);
-};
-
-#endif // SHARE_RUNTIME_SERVICETHREAD_HPP
+}
